objects/partdir_mp__Partner_App_Draft__c.object
<CustomObject>
    <fields>
        <fullName>partdir_mp__App_Logo_Id__c</fullName>
        <inlineHelpText>Upload app logo image (recommended size 500x500 px)</inlineHelpText>
        <label>App Logo Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>partdir_mp__Application_Id__c</fullName>
        <label>Application Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>partdir_mp__Approver_Email__c</fullName>
        <formula>partdir_mp__Partner_App__r.partdir_mp__Partner__r.partdir_mp__Approver__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approver Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>partdir_mp__CommunityUrl__c</fullName>
        <label>CommunityUrl</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>partdir_mp__Full_Description__c</fullName>
        <label>Full Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>partdir_mp__Industry__c</fullName>
        <label>Industry</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>Communications</fullName>
                </value>
                <value>
                    <fullName>Consumer Goods</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Energy</fullName>
                </value>
                <value>
                    <fullName>Financial Services</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
                <value>
                    <fullName>High Tech</fullName>
                </value>
                <value>
                    <fullName>Life Sciences</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Nonprofit</fullName>
                </value>
                <value>
                    <fullName>Professional Services</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Transportation &amp; Logistics</fullName>
                </value>
                <value>
                    <fullName>Travel &amp; Hospitality</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>partdir_mp__List_Description__c</fullName>
        <label>List Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>partdir_mp__Partner_App__c</fullName>
        <label>Partner App</label>
        <referenceTo>partdir_mp__Partner_App__c</referenceTo>
        <relationshipLabel>Partner App Drafts</relationshipLabel>
        <relationshipName>Partner_App_Drafts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>partdir_mp__Partner_Email__c</fullName>
        <formula>partdir_mp__Partner_App__r.Owner:User.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>partdir_mp__Published__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Published</label>
        <type>Checkbox</type>
    </fields>
    <label>Partner App Draft</label>
    <nameField>
        <label>Partner App Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner App Drafts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>